@@ -23,7 +23,6 @@ comes with this distribution for details.
 - AnyEvent::Ident
 - AnyEvent::Open3::Simple
 - AnyEvent::WebSocket::Client
-- AnyEvent::WebSocket::Server
 - App::cpangitify
 - App::cpanminus
 - App::RegexFileUtils
