@@ -84,7 +84,6 @@ Yars                                           = 0.92
 Yars::Client                                   = 0.91
 
 AnyEvent                                       = 0
-AnyEvent::WebSocket::Server                    = 0
 App::cpanminus                                 = 0
 Authen::Simple                                 = 0
 autodie                                        = 0
